# nono

./: .gitignore  CMakeLists.txt  image_queries  notes
src/: CMakeLists.txt  colour.cpp  colour.hpp  combinations.cpp  combinations.hpp  download.cpp  download.hpp  image.hpp  includes.hpp  main.cpp  nonogram.cpp  nonogram.hpp  random_picture.cpp  random_picture.hpp  string.cpp  string.hpp  svg.cpp  svg.hpp
